# prompt-library

./: .env.example  .gitignore  ARCHITECTURE.md  CONTEXT.md  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml  openapi.yml
bruno/: bruno.json  health.bru
bruno/auth/: generate-key.bru  me.bru
bruno/categories/: create-category.bru  delete-category.bru  get-category.bru  list-categories.bru  update-category.bru
bruno/environments/: local.bru
bruno/prompts/: create-prompt.bru  featured-prompts.bru  get-my-rating.bru  get-prompt.bru  list-prompts.bru  publish-prompt.bru  rating-stats.bru  submit-rating.bru  update-prompt.bru  use-prompt.bru
bruno/tags/: create-tag.bru  delete-tag.bru  get-tag.bru  list-tags.bru
migrations/: env.py
openapi/: openapi.json
scripts/: build_pages.py  dev_token.py  eval_embeddings.py  eval_probes.yaml  export_openapi.py  generate_key.py  import_prompts.py  reembed.py
src/: auth_stub.py  cache.py  config.py  database.py  dependencies.py  main.py
src/embeddings/: __init__.py  (+3 more)
tests/: conftest.py  test_audit.py  test_auth.py  test_cache.py  test_categories.py  test_embeddings.py  test_health.py  test_jwt_utils.py  test_logout_everywhere.py  test_me_api_keys.py  test_openapi.py  test_prompts.py  test_rate_limit.py  test_ratings.py  test_reembed_patch.py  test_reembed_script.py  test_request_id.py  test_storage_local.py  test_storage_s3.py  test_tags.py  test_uploads.py  test_visibility.py
(+46 files in other folders)
